--- a/src/commons/styles/project-style.css
+++ b/src/commons/styles/project-style.css
@@ -63,7 +63,12 @@
 }
 
 :local(.back) {
-    background-color: #FAFAF6;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("../images/iot-why-thales.jpg");
 }
 
 :local(.titleSubtitleContainer) {
@@ -311,3 +316,7 @@
     background: #DCDCDC;
     border-color: #A9A9A9
 }
+
+body > #root > div {
+    height: 100vh;
+  }
