--- a/src/commons/styles/project-style.css
+++ b/src/commons/styles/project-style.css
@@ -53,24 +53,9 @@
     float: left;
 }
 
-:local(.background-image) {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 1920px;
-    background-image: url("../images/blue.png");
-}
-
 :local(.back) {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("../images/iot-why-thales.jpg");
+    background-color: #FAFAF6;
 }
-
 :local(.titleSubtitleContainer) {
     display: inline-flex;
 }
